tests/interp/bad/exists-7.ngc
(Expected ] reading bracketed parameter)
G0 X EXISTS[#<foo>+1]
M2
